--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
-imageio==2.2.0
-imagesize==0.7.1
-matplotlib==2.1.2
-numpy==1.14.2
-numpydoc==0.7.0
-pandas==0.22.0
-python-dateutil==2.6.1
-scikit-image==0.13.1
-scikit-learn==0.19.1
-scipy==1.0.0
-seaborn==0.8.1
-tensorboard==1.6.0
-tensorboard-logger==0.1.0
-torch==0.1.12
-torchfile==0.1.0
-torchvision==0.2.0
-visdom==0.1.7
+imageio
+imagesize
+matplotlib
+numpy
+numpydoc
+pandas
+python-dateutil
+scikit-image
+scikit-learn
+scipy
+seaborn
+tensorboard
+tensorboard-logger
+torch~=1.13.1
+torchfile
+torchvision
+visdom
+
+opencv-python~=4.7.0.68
+tensorflow==2.8.0
